# alumina

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  bacon.toml  egui.md  flake.nix  readme.md  rust-toolchain
.github/workflows/: rust.yml
crates/alumina_app/: Cargo.toml  README.md
crates/alumina_app/src/: main.rs  wrap_app.rs
crates/bbox/: .gitignore  Cargo.toml  README.md
crates/bbox/src/: lib.rs
crates/board/: esp32c3-1axis.fzz  esp32c3-4axis.fzz  esp32c3.fzz  esp32c6.fzz
crates/egui-wgpu/src/: renderer.rs
crates/egui_demo_lib/: Cargo.toml
crates/egui_demo_lib/src/demo/: about.rs  cad.rs  configuration.rs  controls.rs  database.rs  demo_app_windows.rs  esp32c3.rs  esp32c6.rs  files.rs  images.rs  mesh.rs  mod.rs  postprocess.rs  toolpath.rs
crates/egui_glow/src/: painter.rs
crates/firmware-embassy/boards/: picow-controller.fzz
crates/firmware-embassy/examples/rp/: Cargo.toml
crates/firmware-embassy/examples/rp/.cargo/: config.toml
crates/firmware-esp32-wroom32/: Cargo.toml  build.rs  partitions.csv  readme.md
crates/firmware-esp32-wroom32/.cargo/: config.toml
crates/firmware-esp32-wroom32/src/: main.rs
crates/firmware-esp32c3/: Cargo.toml  build.rs  index.html.br  private.pem  public.pem  readme.md  rust-toolchain.toml  sdkconfig.defaults
crates/firmware-esp32c3/.cargo/: config.toml
crates/firmware-esp32c3/src/: interrupt_handler.rs  interrupts.rs  main.rs  pins.rs  serial.rs
crates/implicit3d/: Cargo.toml
crates/implicit3d/src/: lib.rs
crates/vr-ui/: Cargo.toml
docs/: egui_demo_app.js  geometric primitives.scad  geometric_data_types.odg  index-zstd.html  index-zstd.js  index.html  index.html.patch  index.html.rej  index.html.zst  index.js  index.js.min  index.js.min.zst  index.js.orig  index.js.patch  index.js.zst  index_bg.wasm.br  index_bg.wasm.zst  multiple_apps.html
egui-old-branch/crates/egui_demo_lib/src/demo/: application_log.rs  toolpath.rs  voxels.rs
firmware/: .gitignore  Cargo.toml  README.md
firmware-esp32c3/: .gitignore  build.rs
firmware-esp32c3/src/: main.rs
firmware-stm32f4xx/: Cargo.toml  README.md
firmware-stm32f4xx/src/: main.rs
firmware/src/: main.rs
scripts/: build_demo_web.sh  check.sh  clippy_wasm.sh  find_bloat.sh  start_server.sh  wasm_bindgen_check.sh
ui/: Cargo.toml
ui-dev/crates/egui_demo_app/src/: main.rs
ui-dev/crates/egui_demo_lib/src/demo/: coordinates.rs  demo_app_windows.rs  networkcomms.rs
ui/crates/dxf-rs/: Cargo.toml
ui/crates/egui_demo_app/src/: main.rs
ui/crates/egui_demo_lib/: Cargo.toml
ui/crates/egui_demo_lib/src/: wasm_file.rs
ui/crates/egui_demo_lib/src/demo/: catalog.rs  codecad.rs  controls.rs  database.rs  demo_app_windows.rs  gcode.rs  images.rs  mesh.rs  mod.rs  serialcomms.rs  toolpath.rs
ui/docs/: index.js  index.js.br  index_bg.wasm
ui/scripts/: build_demo_web.sh  setup_web.sh  wasm_bindgen_check.sh
