[package]
name = "egui_demo_lib"
version = "0.22.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Example library for egui"
edition = "2021"
rust-version = "1.65"
homepage = "https://github.com/emilk/egui/tree/master/crates/egui_demo_lib"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emilk/egui/tree/master/crates/egui_demo_lib"
categories = ["gui", "graphics"]
keywords = ["glium", "egui", "gui", "gamedev"]
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true

[lib]


[features]
default = []
chrono = ["egui_extras/datepicker", "dep:chrono"]
## Allow serialization using [`serde`](https://docs.rs/serde).
serde = ["egui/serde", "dep:serde"]
## Enable better syntax highlighting using [`syntect`](https://docs.rs/syntect).
syntax_highlighting = ["syntect"]


[dependencies]
egui = { version = "0.22.0", path = "../egui", default-features = false }
egui_extras = { version = "0.22.0", path = "../egui_extras" }
enum-map = { version = "2", features = ["serde"] }
log = { version = "0.4", features = ["std"] }
unicode_names2 = { version = "0.6.0", default-features = false }
futures = "*"

#! ### Optional dependencies
chrono = { version = "0.4", optional = true, features = ["js-sys", "wasmbind"] }
## Enable this when generating docs.
document-features = { version = "0.2", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
syntect = { version = "5", optional = true, default-features = false, features = ["default-fancy"] }
zip = { version = "^0.6.6", default-features = false, features = ["deflate"] } # bzip2 and zstd fail to cross-compile for wasm
rfd = "^0.11.4"
svg2polylines = "^0.8.1"
dxf = "^0.5.0"
ngc = "^0.2.6"
gen_gcode = "^0.1.0"
uuid = { version = "0.8.2", features = ["v4", "wasm-bindgen"] } # js feature is for wasm-bindgen
wasm-bindgen-futures = "0.4.36"
kiss3d = "0.32"
reqwest = { version = "0.11", features = ["json"] }


[dev-dependencies]
criterion = { version = "0.4", default-features = false }


[[bench]]
name = "benchmark"
harness = false
