[package]
name = "http-server"
version = "0.1.0"
authors = [
    "Anatol Ulrich <anatol.ulrich@ferrous-systems.com>",
    "Sergio Gasquez <sergio.gasquez@gmail.com>",
]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
strip = true

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
#opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
anyhow = "=1.0.69"
embedded-svc = "=0.24.0"
esp-idf-hal = "=0.40.1"
esp-idf-svc = { version = "0.45.0", features = ["experimental", "alloc"] }
esp-idf-sys = { version = "=0.32.1", features = ["binstart"] }
shtcx = "=0.11.0"
toml-cfg = "=0.1.3"
wifi = { path = "wifi" }
httparse = "1.5.1"
stepgen = "0.1.3"

[build-dependencies]
anyhow = "=1.0.69"
embuild = "=0.31.1"
toml-cfg = "=0.1.3"
